--- a/Semana1/aula4/style.css
+++ b/Semana1/aula4/style.css
@@ -7,19 +7,48 @@ h1 {
 }
 
 body {
+  width: 100vw;
+  height: 100vh;
   font-family: sans-serif;
+  font-weight: bold;
+  background-image: url(https://png.pngtree.com/background/20210709/original/pngtree-pink-flower-plant-floral-background-picture-image_280966.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-
+/* Exemplo de seletor por "tagName" */
 h2 {
   margin: 30px;
-  border: 3px solid orangered;
+  border: 3px solid rgb(226, 126, 251);
   padding: 6px;
 }
-
+/* Exemplo de seletor por "id" */
 #subtitulo {
-  background-color: rgb(238, 230, 220);
+/* Exemplo de priorização de estilo com important */
+  background-color: rgb(241, 210, 237) !important;
+}
+/* Exemplo de seletor por "class" */
+p.destaque {
+  background-color: darkorchid;
 }
 
-.destaque {
-  background-color: darkorchid;
+.destaque span {
+  background-color: aquamarine;
+}
+
+.destaque span span{
+  background-color: rgb(127, 191, 255);
+}
+/*  Tira o sublinhado de links ou outros textos*/
+a {
+  text-decoration: none;
+}
+/* Tira as bolinhas da lista */
+/* 
+ul {
+  list-style: none;
+}
+*/
+
+ul>li>p {
+  color: darkviolet;
 }
